--- a/RxJS/package.json
+++ b/RxJS/package.json
@@ -4,7 +4,7 @@
   "description": "Practica a la programacion reactiva",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "cls && webpack-dev-server"
   },
   "keywords": [
     "Reactive",
